modal pop up css clean up

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Hello</div>
-    <p class="container">hello</p>
-
+    <header>
+      <h1>
+        <span> Let's </span>
+        create a modal
+      </h1>
+      <p>Click the button below</p>
+      <button>TEST POPUP</button>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
