--- a/index.html
+++ b/index.html
@@ -14,8 +14,26 @@
         create a modal
       </h1>
       <p>Click the button below</p>
-      <button>TEST POPUP</button>
     </header>
+    <section>
+      <div class="container">
+        <form action="">
+          <button id="btn">TEST POPUP</button>
+        </form>
+      </div>
+    </section>
+    <div class="modal">
+      <div class="modal-content">
+        <span class="close"> &times;</span>
+        <h1>Hello world</h1>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut vero
+          dicta, amet sapiente dolorem reprehenderit ex et dolores quo sed
+          corporis quod quos fugiat beatae quasi doloremque magni facere?
+        </p>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
