modal pop up clean up

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <h1>Hello world</h1>
         <hr />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut vero
-          dicta, amet sapiente dolorem reprehenderit ex et dolores quo sed
-          corporis quod quos fugiat beatae quasi doloremque magni facere?
+          Hello........ writing actual words is better than placeholder,but then
+          it waste time .......so, can we use placeholder to populate the stuff?
+          not a bad idea ......Lorem ipsum dolor sit amet consectetur
+          adipisicing elit.
         </p>
       </div>
     </div>
